--- a/angular-client/src/app/category/category.component.html
+++ b/angular-client/src/app/category/category.component.html
@@ -1,14 +1,104 @@
-<h1>{{category.name}}</h1>
-<h2>Słówka:</h2>
-<ul>
-  <li *ngFor="let word of words">
-    <strong>{{word.word}}</strong>
-    <ul>
-      <li *ngFor="let translation of wordsTranslationsMapping[word.id]; let i = index">
-        {{i+1}}. {{translation.domain}}<br>
-        {{translation.word}} - {{translation.wordTranslation}}<br>
-        {{translation.example}} - {{translation.exampleTranslation}}
-      </li>
+<html>
+<head>
+  <!--<link rel="stylesheet" type="text/css" href="navigation_panel.css">-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <title>Kategoria</title>
+</head>
+<body>
+
+<!-- Right panel containing informational boxes-->
+
+<div class="right-panel">
+
+  <!-- One box in the right panel -->
+  <div class="black-box upper-box">
+    <!-- Header -->
+    <div class="box-title">Ucz się!</div>
+    <div class="upper-part">Opanowałeś ten dział w  <span class="fancy-text">58%</span></div>
+    <div class="bottom-part">
+      <div class="black-box-text">Wybierz słówka i przejdź do ćwiczeń, aby poprawić swój wynik</div>
+    </div>
+    <!-- Button with link to exercises -->
+    <a class="fancy-button not-selectable" href="#">Przejdź do ćwiczeń<i class="fas fa-play-circle"></i></a>
+  </div>
+
+</div>
+
+<!-- Content of page -->
+
+<div class="content">
+
+  <!-- The upper functional panel -->
+  <div class="top-panel">
+    <!-- Header of the panel -->
+    <h1 class="panel-title editable" style="margin: 0;">{{category.name}}<i class="fas fa-pencil-alt pencil-icon"></i> <i class="far fa-trash-alt"></i></h1>
+    <!-- List of actions (delete, add) in form of a menu -->
+    <ul class="panel-actions">
+      <li class="content-panel-item">Dodaj słówka</li>
+      <li class="content-panel-item">Usuń słówka</li>
     </ul>
-  </li>
-</ul>
+
+
+    <ul class="letter-index" style="margin: 0;">
+      <div class="letter-index-div" *ngFor="let letter of letters">
+        <li *ngIf="!letter.hasWord" class="letter-index-item"><a class="letter-index-link deactivated-link">{{letter.letter}}</a></li>
+        <li *ngIf="letter.hasWord" class="letter-index-item"><a href="{{router.url.split('#')[0]}}#letter-{{letter.letter}}" class="letter-index-link">{{letter.letter}}</a></li>
+      </div>
+
+    </ul>
+
+    <div class="search-input">
+      <input (keyup)="onSearch($event)" tpe="text" class="main-search" placeholder="Szukaj słówka w kategorii...">
+      <i class="fas fa-search search-icon"></i>
+    </div>
+
+    <div class="select-words">
+      <button class="select-words-text select-words-button">Wybierz wszystkie</button><button class="select-words-arrow select-words-button"></button>
+      <div class="number-of-selected-words">Wybrano: 100</div>
+      <ul class="select-words-menu">
+        <li class="menu-item ">Wybierz wszystkie</li>
+        <li class="menu-item">Wybierz trudne</li>
+      </ul>
+    </div>
+
+  </div>
+
+  <ng-container *ngIf="dataLoaded" >
+    <div *ngFor="let letter of firstLetters">
+      <div *ngIf="letter.words.length > 0" class="content-block categories-content">
+        <div class="letter-category">
+             <!--*ngIf="searchTerm.length == 0 || letter.letter.toLowerCase().startsWith(searchTerm[0].toLowerCase())">-->
+
+          <div id="letter-{{letter.letter}}" class="letter-header">{{letter.letter.toUpperCase()}}</div>
+
+          <div class="letter-word-description" *ngFor="let word of letter.words">
+            <div *ngIf="word.word.toLowerCase().includes(searchTerm.toLowerCase())">
+              <div class="word-header">
+                <a class="word-header-link" href="#">{{word.word}}</a>
+                <label class="checkbox-container">
+                  <input type="checkbox" checked="checked">
+                  <span class="checkmark"></span>
+                </label>
+              </div>
+
+              <div class="word-descriptions" *ngFor="let translation of wordsTranslationsMapping[word.id]; let i = index">
+                <div class="word-translation">
+                  <div class="translation-category">{{i+1}}. {{translation.domain}}</div>
+                  <div class="original-word translation-header">{{translation.word}}</div>
+                  <div class="translated-word translation-header">{{translation.wordTranslation}}</div>
+                  <div class="original-word">{{translation.example}}</div>
+                  <div class="translated-word">{{translation.exampleTranslation}}</div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </ng-container>
+  </div>
+
+
+</body>
+</html>
