--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -7,7 +7,7 @@
 
 <div class="navigation-panel">
   <a class="logo" [routerLink]="['/home/']"></a>
-  <a class="main-page-button not-selectable" href="#">Strona główna</a>
+  <a class="main-page-button not-selectable" [routerLink]="['/home/']">Strona główna</a>
   <div class="search-input">
     <input type="text" class="main-search" placeholder="Szukaj słówka...">
     <i class="fas fa-search search-icon"></i>
