--- a/angular-client/src/app/home/home.component.html
+++ b/angular-client/src/app/home/home.component.html
@@ -1,20 +1,3 @@
-<!--<h1>Ostatnio dodane słówka:</h1>-->
-<!--<ul>-->
-  <!--<li >-->
-    <!--{{lastWord.word}}-->
-  <!--</li>-->
-<!--</ul>-->
-
-<!--<h1>Trudne słówka:</h1>-->
-<!--<ul>-->
-  <!--<li *ngFor="let hardWord of hardWords">-->
-    <!--{{hardWord.word}}-->
-  <!--</li>-->
-<!--</ul>-->
-<!--<button (click)="resetHardWords()">Reset</button>-->
-
-
-
 <html>
 <head>
   <!--<link rel="stylesheet" type="text/css" href="navigation_panel.css">-->
@@ -58,7 +41,9 @@
       <div class="last-added-block content-block">
         <div class="box-title">Ostatnio dodane</div>
         <ul class="list-of-words">
-          <li *ngFor="let lastWord of lastWords; let i = index"><a href="#" class="link-to-word">{{i+1}}. {{lastWord.word}}</a></li>
+          <li *ngFor="let lastWord of lastWords; let i = index">
+            <a [routerLink]="['/word/' + lastWord.id]" class="link-to-word">{{i+1}}. {{lastWord.word}}</a>
+          </li>
         </ul>
         <a class="fancy-button not-selectable" href="#">Ćwicz nowe słówka<i class="fas fa-play-circle"></i></a>
       </div>
@@ -66,7 +51,9 @@
       <div class="hard-words-block content-block">
         <div class="box-title">Trudne słówka</div>
         <ul class="list-of-words" >
-          <li *ngFor="let hardWord of hardWords; let i = index"><a href="#" class="link-to-word">{{i+1}}.  {{hardWord.word}}</a></li>
+          <li *ngFor="let hardWord of hardWords; let i = index">
+            <a [routerLink]="['/word/' + hardWord.id]" class="link-to-word">{{i+1}}. {{hardWord.word}}</a>
+          </li>
         </ul>
         <a class="fancy-button" (click)="resetHardWords()" style="cursor: pointer;">Zresetuj</a>
       </div>
