--- a/angular-client/src/app/app.component.css
+++ b/angular-client/src/app/app.component.css
@@ -5,8 +5,10 @@
 
 body {
   font-family: 'Open Sans';
+  height: 200%;
   font-size: 12px;
   color: #0d0d0d;
+  overflow-y:auto;
 }
 
 @font-face {
@@ -373,11 +375,11 @@ body {
 }
 
 .right-panel .black-box.upper-box {
-  top: 177px; /* Same upper bound as Main Page button */
+  top: 70px; /* Same upper bound as Main Page button */
 }
 
 .right-panel .black-box.bottom-box {
-  top: 532px;
+  top: 425px;
 }
 
 .box-title {
