--- a/angular-client/src/app/home/home.component.html
+++ b/angular-client/src/app/home/home.component.html
@@ -6,31 +6,31 @@
 </head>
 <body>
 
-<div class="right-panel">
+<div *ngIf="loadedData" class="right-panel">
 
   <div class="black-box upper-box">
     <div class="box-title">Ucz się!</div>
-    <div class="upper-part">Ostatnio ćwiczyłeś słówka z kategorii <span class="fancy-text">JEDZENIE</span></div>
+    <div class="upper-part">Ostatnio ćwiczyłeś słówka z kategorii <span class="fancy-text">{{appState.categories[0].name}}</span></div>
     <div class="bottom-part">
       <div class="black-box-text">Opanowałeś ją już w <b>58%</b></div>
       <div class="black-box-text">Przejdź do tej kategorii, aby poprawić swój wynik</div>
     </div>
-    <a class="fancy-button not-selectable" href="#">Przejdź do kategorii<i class="fas fa-play-circle"></i></a>
+    <a class="fancy-button not-selectable" [routerLink]="['/category/' + appState.categories[0].id]">Przejdź do kategorii<i class="fas fa-play-circle"></i></a>
   </div>
 
   <div class="black-box bottom-box">
     <div class="box-title">Słówko dnia</div>
-    <div class="upper-part"><span class="fancy-text">Pancake</span></div>
+    <div class="upper-part"><span class="fancy-text">{{hardWords[0].word}}</span></div>
     <div class="bottom-part">
       <div class="black-box-photo"><img src="/assets/sample-photo.jpg"></div>
-      <div class="black-box-text">Naleśnik</div>
+      <!--<div class="black-box-text">Naleśnik</div>-->
     </div>
-    <a class="fancy-button not-selectable" href="#">Przejdź do słówka<i class="fas fa-play-circle"></i></a>
+    <a class="fancy-button not-selectable" [routerLink]="['/word/' + hardWords[0].id]">Przejdź do słówka<i class="fas fa-play-circle"></i></a>
   </div>
 
 </div>
 
-<div class="content">
+<div *ngIf="loadedData" class="content">
   <div class="top-panel">
     <h1 class="main-page panel-title" style="margin: 0"><span class="small-letters-title">ad</span>DICT</h1>
     <ul class="panel-actions"></ul>
